fix sql revisions for 1.10 -> 2.0
use alembic-postgresql-enum for enum revisions

(cherry picked from commit 4864341fe3735001eac8d322e9f67fc41f524567)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        pip install alembic
+        pip install alembic alembic-postgresql-enum
         pip install -r requirements.txt
     - name: Parse Alembic History
       id: alembic_history
