don't enforce specific shapely version and fix loading modules before dependency check
shapely 2.0.0 is not build for python3.12

(cherry picked from commit d98b14c640ac0e2b8a866307b2d10d0fe5b11d93)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 GeoAlchemy2==0.12.5
 lxml==4.6.3
-shapely==2.0.0 --no-binary shapely
-SQLAlchemy==1.4.46
+shapely>=2.0.2 --no-binary shapely
+SQLAlchemy==1.4.49
 qasync==0.22.0
-asyncpg==0.26.0
+asyncpg==0.29.0
 packaging
