--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-GeoAlchemy2==0.12.5
-lxml==4.6.3
-shapely>=2.0.2 --no-binary shapely
+lxml
+packaging
 SQLAlchemy==1.4.49
+GeoAlchemy2==0.12.5
+shapely>=2.0.2 --no-binary shapely
 qasync==0.22.0
 asyncpg==0.29.0
 packaging
