typo and ignore temporary folder
(cherry picked from commit 9c9d7082e87382048eb42255ef0a1d8c626581c7)

--- a/installer/build.yaml
+++ b/installer/build.yaml
@@ -13,7 +13,7 @@ steps:
     rootFolderOrFile: 'src/SAGisXPlanung'
     includeRootFolder: true
     archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/SAGixXPlanung-$(Build.SourceBranchName).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/SAGisXPlanung_$(Build.SourceBranchName).zip'
     replaceExistingArchive: true
 
 - task: PublishBuildArtifacts@1
