attempt to fix tests
the interaction of pytest-qt and coverage caused some starnge segmentation faults even after all tests passed; solved by adding a parent widget to a qt dialogand removing a test where the map canvas fixture of pytest-qgis cannot be used as pytest-qt widget

(cherry picked from commit c1ed391095404e092fb794acdd6aabb9d24ca7e3)

--- a/installer/test.yaml
+++ b/installer/test.yaml
@@ -22,7 +22,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    python3 -m pytest -p no:cacheprovider --cov=src --cov-report=xml
+    python3 -m pytest --cache-clear --cov=src --cov-report=xml
   displayName: 'Tests'
   env:
     QT_QPA_PLATFORM: "offscreen"
