--- a/installer/build.yaml
+++ b/installer/build.yaml
@@ -10,7 +10,7 @@ steps:
 
 - script: |
     python3 -m pip install --upgrade pip
-    python3 -m pip install mkdocs
+    python3 -m pip install mkdocs-material
   displayName: 'Install mkdocs'
 
 - script: |
