add user documentation for new features
(cherry picked from commit 872b36e4d7f64c27b41632fcda1cdf24f2112c7f)

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -73,6 +73,7 @@ nav:
       - plan-import.md
       - plan-export.md
       - multi-edit.md
+      - map-display.md
   - Elemente der Oberfläche:
       - elements/main-dialog.md
       - elements/plan-details.md
